--- a/app/qml/app_qml.qrc
+++ b/app/qml/app_qml.qrc
@@ -35,6 +35,8 @@
         <file>Missions/Edit/MissionRouteView.qml</file>
         <file>Missions/Edit/MissionRouteItem.qml</file>
         <file>Missions/Edit/MissionRouteItemEdit.qml</file>
+        <file>Missions/Edit/WaypointEdit.qml</file>
+        <file>Missions/Edit/MissionPlanner.qml</file>
         <file>Missions/Menus/MissionsMenuView.qml</file>
         <file>MainWindow.qml</file>
     </qresource>
